added new nav bar

--- a/BlazorMovie/Components/Pages/Home.razor
+++ b/BlazorMovie/Components/Pages/Home.razor
@@ -2,6 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
+<div class="h-100 d-flex flex-column justify-content-center align-items-center">
 <h1>Hello, world!</h1>
+<img src="/img/MovieProWonderLogo680.png" class="w-25"/>
+ <button class="btn btn-primary">primary button</button>
+</div>
 
-Welcome to your new app.
