--- a/BlazorMovie/Components/Layout/Footer.razor
+++ b/BlazorMovie/Components/Layout/Footer.razor
@@ -1,15 +1,15 @@
 ﻿<div class="p-3 footerStyle" data-bs-theme="dark">
     <div class="container-xxl">
-        <div class="row row-cols-1 row-cols-md-3 text-center align-items-center">
-            <div class="col text-md">
+        <div class="row row-cols-1 row-cols-md-3 text-center align-items-center g-3">
+            <div class="col text-md-start order-last order-md-first">
                 <div class="row">
                     <div class="col-12">
-
+                        <span class="me-1" >Built by</span>
                         <img src="img/White_logo_rev.png" height="60" />
                     </div>
-                    @* <div class="col-12">
+                    <div class="col-12">
                     &copy; 2023 SJ Wonder
-                    </div> *@
+                    </div>
 
                 </div>
             </div>
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-end">
                 <div class="row">
-                    <div class="col-12 me-2">
+                    <div class="col-12 me-4">
                         <a href="www.linkedin.com/in/shellywonder" target="_blank" title="SJ's LinkedIn">
                             <i class="bi bi-linkedin"></i>
                         </a>
@@ -33,6 +33,20 @@
                         @* <a href="https://www.instagram.com/">
                         <i class="bi bi-instagram"></i>
                         </a> *@
+                        <div class="col-12 me-2 sjLinks p-2">
+                            <a href="#" target="_blank" title="SJ's Bug Tracker Project">
+                                 Atlas Tracker
+                            </a>
+                            &bull;
+                            <a href="#" target="_blank" title="SJ's Open AI Project">
+                                My AI Cookbook
+                            </a>
+                            &bull;
+                            <a href="www.wonderwebdev.com" target="_blank" title="SJ's Portfolio">
+                                Portfolio
+                            </a>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
