--- a/BlazorMovie/wwwroot/css/app.css
+++ b/BlazorMovie/wwwroot/css/app.css
@@ -9,6 +9,7 @@
     --sjw-golden-color: #ffa060;
     --sjw-tertiary-color: #F2BF5E; /*Mustard*/
     --sjw-font-color: #0b0b45;
+    --sjw-footer-font-color: #faebd7;/*Antique white*/
     /*text styles*/
     --sjw-font-size: 1rem;
 }
