--- a/BlazorMovie/Components/Pages/Home.razor
+++ b/BlazorMovie/Components/Pages/Home.razor
@@ -1,10 +1,36 @@
 ﻿@page "/"
+@using BlazorMovie.Services
+@using BlazorMovie.Models
+
+@inject TMDBClient TMDB
 
 <PageTitle>Home</PageTitle>
 
 <div class="h-100 d-flex flex-column justify-content-center align-items-center">
-<h1>Hello, world!</h1>
-<img src="/img/MovieProWonderLogo680.png" class="w-25"/>
- <button class="btn btn-primary">primary button</button>
+    <h1>Hello, World!</h1>
+    <img src="/img/MovieProWonderLogo680.png" class="w-25" />
+    <button class="btn btn-primary">primary button</button>
+
+    @* if (movies is not null)
+    {
+    <ul>
+        @foreach (PopularMovie movie in movies.Results)
+        {
+            <li>@movie.Title</li>
+        }
+    </ul>
+    }
+    else
+    {
+    <p>Loading...</p>
+    } *@
 </div>
 
+@code {
+    private PopularMoviesPageResponse? movies;
+
+    protected override async Task OnInitializedAsync()
+    {
+        movies = await TMDB.GetPopularMoviesAsync();
+    }
+}
