--- a/BlazorMovie/Components/Pages/Home.razor
+++ b/BlazorMovie/Components/Pages/Home.razor
@@ -11,7 +11,7 @@
     <img src="/img/MovieProWonderLogo680.png" class="w-25" />
     <button class="btn btn-primary">primary button</button>
 
-    if (movies is not null)
+    @if (movies is not null)
     {
     <ul>
         @foreach (PopularMovie movie in movies.Results)
