--- a/BlazorMovie/Components/UI/MovieCard.razor
+++ b/BlazorMovie/Components/UI/MovieCard.razor
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div class="card-footer text-end">
-            <a class="btn btn-primary mb-3" href="/">Details</a>
+            <a class="btn btn-primary mb-3" href="/movie/@Movie.Id">Details</a>
         
         </div>
     </div>
