--- a/BlazorMovie/Components/UI/MovieCard.razor
+++ b/BlazorMovie/Components/UI/MovieCard.razor
@@ -1,6 +1,6 @@
 ﻿@if (Movie is not null)
 {
-    <div class="card h-100 fade-in">
+    <div class="card h-100 fade-in shadow p-3 mb-5 bg-body-tertiary rounded">
         @if (string.IsNullOrEmpty(Movie.PosterPath))
         {
 
@@ -17,16 +17,16 @@
             </p>
         </div>
         <div class="card-footer text-end">
-            <a class="btn btn-primary mb-3" href="/movie/@Movie.Id">Details</a>
+            <a class="btn btn-primary mb-3 " href="/movie/@Movie.Id">Details</a>
         
         </div>
     </div>
 }
 else
-{ 
-    <div class="card h-100">
+{
+    <div class="card h-100 shadow p-3 mb-5 bg-body-tertiary rounded">
         <img class="card-img-top" alt="Movie Poster" src="/img/PosterPlaceHolder.png" />
-        <div class="card-body border-top bg-light">
+        <div class="card-body border-top bg-light ">
             <h5 class="card-title placeholder-glow">
                 <span class="placeholder col-6"></span>
             </h5>
