--- a/BlazorMovie/Components/Pages/Movie.razor
+++ b/BlazorMovie/Components/Pages/Movie.razor
@@ -16,19 +16,19 @@ else
         <div class="hero-container-xxl d-flex flex-column flex-md-row">
             <!--title content goes here-->
             <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
-                <div class="hero-container text-center text-md-end">
-                    <h1 class="text-light">@movieDetails.Title</h1>
+                <div class="mt-3 text-center text-md-end pe-3">
+                    <h1 class="text-light">@movieDetails.Title?.ToUpper()</h1>
                     <h2 class="text-light">@movieDetails.Tagline</h2>
                     @if (DateTime.TryParse(movieDetails.ReleaseDate, out DateTime releaseDate))
                     {
-                        <span class="badge me-2 text-bg-light">@releaseDate.ToString("MMM dd, yyyy")</span>
+                        <span class="badge me-2 releaseDate">@releaseDate.ToString("MMM dd, yyyy")</span>
                     }
                     @{
                         var runtime = $"{movieDetails.Runtime / 60}h {movieDetails.Runtime % 60}m";
                         var rating = (movieDetails.VoteAverage * 10).ToString("F1");
                     }
-                    <span class="badge me-2 text-bg-dark">@runtime</span>
-                    <span class="badge me-2 text-bg-success">@rating%<i class="bi bi-stars"></i></span>
+                    <span class="badge me-2 runtime">@runtime</span>
+                    <span class="badge me-2 rating">@rating%<i class="bi bi-stars"></i></span>
                     <div class="movie-links">
                         <div class="d-flex justify-content-center justify-content-md-end p-3">
                             @if (!string.IsNullOrEmpty(movieDetails.Homepage))
@@ -48,20 +48,39 @@ else
                     </div>
 
                 </div>
-
             </div>
             <!--poster goes here-->
-            <div>
+            <div class="order-last order-md-first d-flex justify-content-center">
                 <div class="poster-container">
                     @if (string.IsNullOrEmpty(movieDetails.PosterPath))
                     {
-                    <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
-                        
+                        <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
                     }
+                    else
+                    {
+                        <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
+                    }
+
                 </div>
             </div>
         </div>
     </div>
+    <div class="container-xxl">
+        <div class="overview d-flex flex-column">
+            <p>@movieDetails.Overview</p>
+            @if (movieDetails.SpokenLanguages.Any())
+            {
+                <div>
+                    <strong> Languages:</strong> @string.Join(",", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
+                </div>
+            }
+        <div>
+
+        </div>
+           
+        </div>
+    </div>
+        
 
 }
 
