--- a/BlazorMovie/Components/Pages/Movie.razor.css
+++ b/BlazorMovie/Components/Pages/Movie.razor.css
@@ -5,12 +5,64 @@
     background-repeat: no-repeat;
     min-height: 400px;
 }
-.hero-container{
-    
+
+.badge {
+    font-size: 0.75rem;
+    font-weight: 400;
+    color: var(--sjw-footer-font-color);
+    margin-bottom: 1rem;
+}
+
+.releaseDate {
+    background-color: var(--sjw-secondary-color);
+}
+
+.runtime {
+    background-color: var(--sjw-golden-color);
+}
+
+.rating {
+    background-color: var(--sjw-primary-color);
+}
+
+
+
+
+.hero-container-xxl {
     min-height: 400px;
     width: 100%;
     height: 100%;
     position: relative;
-    backdrop-filter:blur(3px) brightness(.5);
-    margin-bottom: 2px;
+    backdrop-filter: blur(3px) brightness(.5);
+    margin-bottom: 2rem;
+}
+
+.poster-container {
+    max-height: 24rem;
+    aspect-ratio: 2/3;
+    position: relative;
+    box-shadow: var(--sjw-box-shadow);
+    border-radius: .5rem;
+    margin: 0 2rem 2rem 2rem;
+    transform: translateY(50%)
+}
+
+    .poster-container img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+    }
+
+.overview {
+    margin-top: 12rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+}
+
+@media (min-width: 992px) {
+    .overview {
+        margin-left: calc((24rem * .666) + 4rem);
+        margin-top: 2rem;
+        font-size: 1.2rem;
+    }
 }
