added pagination component

--- a/BlazorMovie/Components/Pages/Movie.razor.css
+++ b/BlazorMovie/Components/Pages/Movie.razor.css
@@ -11,6 +11,8 @@
     font-weight: 400;
     color: var(--sjw-footer-font-color);
     margin-bottom: 1rem;
+    border: 2px solid;
+    border-color: var(--sjw-footer-font-color);
 }
 
 .releaseDate {
