--- a/BlazorMovie/Components/Pages/Home.razor
+++ b/BlazorMovie/Components/Pages/Home.razor
@@ -6,17 +6,16 @@
 
 <PageTitle>Movie Pro Wonder - Popular Movies</PageTitle>
 <div class="container-xxl py-3">
-        <div class="text-center mt-2 mb-3">
-            <h1 class="display-6">
-                <span class="text-danger">
-                    <i class="bi bi-fire"></i>
-                </span>
-                Popular Movies
-            </h1>
-        </div>
+    <div class="text-center mt-2 mb-3">
+        <h1 class="display-6">
+            <span class="text-danger">
+                <i class="bi bi-fire"></i>
+            </span>
+            Popular Movies
+        </h1>
+    </div>
 
     <div class="d-flex flex-column flex-md-row justify-content-between my-3">
-
 
         <div class="row row-cols-2 row-cols-lg-4 row-cols-xl-5 g-3 justify-content-center justify-content-md-start">
             @if (movies is not null)
@@ -40,9 +39,19 @@
                     </div>
                 }
             }
-            }
+            
         </div>
     </div>
+    @if (movies?.TotalPages > 1)
+    {
+        <div class="my-3">
+            <Paginator CurrentPage="movies.Page"
+                       TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages" />
+
+        </div>
+
+    }
+
 </div>
 
 
