--- a/BlazorMovie/Components/Pages/Home.razor
+++ b/BlazorMovie/Components/Pages/Home.razor
@@ -3,6 +3,7 @@
 @using BlazorMovie.Models
 
 @inject TMDBClient TMDB
+@inject NavigationManager navManager
 
 <PageTitle>Movie Pro Wonder - Popular Movies</PageTitle>
 <div class="container-xxl py-3">
@@ -39,14 +40,15 @@
                     </div>
                 }
             }
-            
+
         </div>
     </div>
     @if (movies?.TotalPages > 1)
     {
         <div class="my-3">
             <Paginator CurrentPage="movies.Page"
-                       TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages" />
+                       TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages"
+                       OnPageChange="GetPage" />
 
         </div>
 
@@ -58,8 +60,18 @@
 @code {
     private PopularMoviesPageResponse? movies;
 
-    protected override async Task OnInitializedAsync()
+    [SupplyParameterFromQuery]
+    public int Page { get; set; } = 1;
+
+    protected override async Task OnParametersSetAsync()
     {
-        movies = await TMDB.GetPopularMoviesAsync();
+        if (Page < 1) Page = 1;
+        else if (Page > 500) Page = 500;
+        movies = await TMDB.GetPopularMoviesAsync(Page);
+    }
+    private void GetPage(int pageNum)
+    {
+        string url = navManager.GetUriWithQueryParameter("page", pageNum);
+        navManager.NavigateTo(url);
     }
 }
