Building out the NowPlaying component

--- a/BlazorMovie/Components/Pages/Movie.razor
+++ b/BlazorMovie/Components/Pages/Movie.razor
@@ -2,7 +2,7 @@
 @using BlazorMovie.Services
 @inject TMDBClient TMDB
 
-
+@*movie details*@
 @if (movieDetails is null)
 {
     //build out placeholder code
