--- a/BlazorMovie/Components/UI/PopularMovies.razor
+++ b/BlazorMovie/Components/UI/PopularMovies.razor
@@ -1,18 +1,17 @@
-﻿@page "/"
-@* @using BlazorMovie.Services
+﻿@using BlazorMovie.Services
 @using BlazorMovie.Models
 
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
 
-<PageTitle>Movie Pro Wonder - Popular Movies</PageTitle>
+<PageTitle>Movie Pro Wonder - @Title</PageTitle>
 <div class="container-xxl py-3">
     <div class="text-center mt-2 mb-3">
         <h1 class="display-6">
             <span class="text-danger">
                 <i class="bi bi-fire"></i>
             </span>
-            Popular Movies
+            @Title
         </h1>
     </div>
 
@@ -60,6 +59,10 @@
 @code {
     private PopularMoviesPageResponse? movies;
 
+    [Parameter]
+    public string? Title { get; set; }
+
+
     [SupplyParameterFromQuery]
     public int Page { get; set; } = 1;
 
@@ -68,11 +71,12 @@
         if (Page < 1) Page = 1;
         else if (Page > 500) Page = 500;
         movies = await TMDB.GetPopularMoviesAsync(Page);
+        Title = "Popular Movies";
     }
+
     private void GetPage(int pageNum)
     {
         string url = navManager.GetUriWithQueryParameter("page", pageNum);
         navManager.NavigateTo(url);
     }
-} *@
-<PopularMovies Title="Popular Movies" />
+}
