--- a/BlazorMovie/Components/Layout/Footer.razor
+++ b/BlazorMovie/Components/Layout/Footer.razor
@@ -8,7 +8,8 @@
                         <img src="img/White_logo_rev.png" height="60" />
                     </div>
                     <div class="col-12">
-                    &copy; 2023 SJ Wonder
+                        
+                        &copy; @DateTime.Now.Year SJ Wonder
                     </div>
 
                 </div>
