--- a/BlazorMovie/Components/Layout/TopNavMenu.razor
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor
@@ -7,8 +7,20 @@
         <div class="collapse navbar-collapse" id="navbarBM">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Home</NavLink>
+                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Popular Movies</NavLink>
                     <i class="bi bi-home"></i>
+                </li> 
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/now_playing">Now Playing</NavLink>
+                    <i class="bi bi-film"></i>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/top_rated">Top Rated</NavLink>
+                    <i class="bi bi-ticket-perforated"></i>
+                </li>
+                 <li class="nav-item">
+                    <NavLink class="nav-link" href="/upcoming">Coming Soon</NavLink>
+                    <i class="bi bi-projector"></i>
                 </li>
 
             </ul>
