--- a/BlazorMovie/Components/_Imports.razor
+++ b/BlazorMovie/Components/_Imports.razor
@@ -9,6 +9,6 @@
 @using BlazorMovie
 @using BlazorMovie.Components
 @using BlazorMovie.Components.Layout
-@using BlazorMovie.Components.UI
+@using BlazorMovie.Components.UIComponents
 @using BlazorMovie.Models
 @using BlazorMovie.Services
