--- a/BlazorMovie/Components/UIComponents/PopularMovies.razor
+++ b/BlazorMovie/Components/UIComponents/PopularMovies.razor
@@ -24,7 +24,7 @@
                 @foreach (PopularMovie movie in movies.Results)
                 {
                     <div class="col">
-                        <MovieCard Movie="movie" />
+                        <MovieCardDetails Movie="movie" />
                     </div>
                 }
 
@@ -34,7 +34,7 @@
                 for (int i = 0; i < 10; i++)
                 {
                     <div class="col">
-                        <MovieCard />
+                        <MovieCardDetails />
 
                     </div>
                 }
