--- a/BlazorMovie/Components/UIComponents/MovieCardDetails.razor
+++ b/BlazorMovie/Components/UIComponents/MovieCardDetails.razor
@@ -1,4 +1,6 @@
-﻿@if (Movie is not null)
+﻿@typeparam TMovie where TMovie : IMovie
+
+@if (Movie is not null)
 {
     <div class="card h-100 fade-in shadow p-3 mb-5 bg-body-tertiary rounded">
         @if (string.IsNullOrEmpty(Movie.PosterPath))
@@ -11,9 +13,9 @@
             <img class="card-img-top" alt="Movie Poster" src="@($"https://image.tmdb.org/t/p/w500/{Movie.PosterPath}")" />
         }
         <div class="card-body border-top bg-light">
-            <h5 class="card-title">@Movie.Title.ToUpper()</h5>
+            <h5 class="card-title">@Movie.Title?.ToUpper()</h5>
             <p class="card-text">
-                @DateTime.Parse(Movie.ReleaseDate).ToString("MMMM dd, yyyy")
+                @DateTime.Parse(Movie.ReleaseDate!).ToString("MMMM dd, yyyy")
             </p>
         </div>
         <div class="card-footer text-end">
@@ -44,6 +46,6 @@ else
 @code {
 
     [Parameter]
-    public PopularMovie? Movie { get; set; }
+    public TMovie? Movie { get; set; }
 
 }
