--- a/BlazorMovie/Components/UIComponents/PopularMovies.razor
+++ b/BlazorMovie/Components/UIComponents/PopularMovies.razor
@@ -1,8 +1,10 @@
 ﻿@using BlazorMovie.Services
 @using BlazorMovie.Models
+@using BlazorMovie.Models.Interfaces
 
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
+@inject PopularMovieService PopularMovieService
 
 <PageTitle>Movie Pro Wonder - @Title</PageTitle>
 <div class="container-xxl py-3">
@@ -18,26 +20,25 @@
     <div class="d-flex flex-column flex-md-row justify-content-between my-3">
 
         <div class="row row-cols-2 row-cols-lg-4 row-cols-xl-5 g-3 justify-content-center justify-content-md-start">
-            @if (movies is not null)
+            @if (movies?.Results is not null)
             {
 
-                @foreach (PopularMovie movie in movies.Results)
+                @foreach (var movie in movies.Results)
                 {
                     <div class="col">
-                        <MovieCardDetails Movie="movie" />
+                        <MovieCardDetails TMovie="PopularMovie" Movie="@movie" />
                     </div>
                 }
 
             }
             else
             {
-                for (int i = 0; i < 10; i++)
-                {
-                    <div class="col">
-                        <MovieCardDetails />
+               
+                    <div class="text-center">
+                        <p>Currently, no movies are available to display.</p>
 
                     </div>
-                }
+                
             }
 
         </div>
@@ -58,9 +59,10 @@
 
 @code {
     private PopularMoviesPageResponse? movies;
+    
 
     [Parameter]
-    public string? Title { get; set; }
+    public string? Title { get; set; } = "Popular Movies";
 
 
     [SupplyParameterFromQuery]
@@ -68,11 +70,16 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        if (Page < 1) Page = 1;
-        else if (Page > 500) Page = 500;
-        movies = await TMDB.GetPopularMoviesAsync(Page);
-        Title = "Popular Movies";
+
+        await LoadMovies();
+
     }
+
+    private async Task LoadMovies()
+    {
+        movies = await PopularMovieService.GetMoviesAsync(Page);
+    }
+
 
     private void GetPage(int pageNum)
     {
