--- a/BlazorMovie/Components/_Imports.razor
+++ b/BlazorMovie/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using BlazorMovie.Components.UIComponents
 @using BlazorMovie.Models
 @using BlazorMovie.Services
+@using BlazorMovie.Models.Interfaces
