--- a/BlazorMovie/Components/Pages/PlayingNow.razor
+++ b/BlazorMovie/Components/Pages/PlayingNow.razor
@@ -21,26 +21,34 @@
                 @foreach (BlazorMovie.Models.NowPlaying movie in movies.Results)
                 {
                     <div class="col">
-                        <MovieCardDetails Movie="movie" />
+                        <MovieCardDetails Movie="@movie" />
                     </div>
                 }
 
             }
             else
             {
-                for (int i = 0; i < 10; i++)
-                {
-                    <div class="col">
-                        <MovieCardDetails/>
 
-                    </div>
-                }
+                <div class="text-center">
+                    <p>Currently, no movies are available to display.</p>
+
+                </div>
+
             }
-                
-            
+
         </div>
 
     </div>
+    @if (movies?.TotalPages > 1)
+    {
+        <div class="my-3">
+            <Paginator CurrentPage="movies.Page"
+                       TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages"
+                       OnPageChange="GetPage" />
+
+        </div>
+
+    }
 
 </div>
 
@@ -50,7 +58,7 @@
     private NowPlayingPageResponse? movies;
 
     [Parameter]
-    public string Title { get; set; } = "Now Playing";
+    public string? Title { get; set; }
 
     [Parameter]
     public NowPlaying? Movie { get; set; }
@@ -60,8 +68,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        if (Page < 1) Page = 1;
-        else if (Page > 500) Page = 500;
+
         movies = await TMDB.GetNowPlayingAsync(Page);
         Title = "Now Playing";
     }
