--- a/BlazorMovie/Components/UIComponents/PopularMovies.razor
+++ b/BlazorMovie/Components/UIComponents/PopularMovies.razor
@@ -4,7 +4,7 @@
 
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
-@inject PopularMovieService PopularMovieService
+@inject IMovieService<PopularMovie> MovieService
 
 <PageTitle>Movie Pro Wonder - @Title</PageTitle>
 <div class="container-xxl py-3">
@@ -26,7 +26,7 @@
                 @foreach (var movie in movies.Results)
                 {
                     <div class="col">
-                        <MovieCardDetails TMovie="PopularMovie" Movie="@movie" />
+                        <MovieCardDetails  Movie="@movie" />
                     </div>
                 }
 
@@ -58,7 +58,7 @@
 
 
 @code {
-    private PopularMoviesPageResponse? movies;
+    private PageResponse<PopularMovie>? movies;
     
 
     [Parameter]
@@ -77,7 +77,7 @@
 
     private async Task LoadMovies()
     {
-        movies = await PopularMovieService.GetMoviesAsync(Page);
+        movies = await MovieService.GetMoviesAsync(Page);
     }
 
 
