Added MovieListComponent to TopRatedPage and changed PopularMovies to PopularMoviesPage to avoid naming conflicts

--- a/BlazorMovie/Components/Pages/PopularMoviesPage.razor
+++ b/BlazorMovie/Components/Pages/PopularMoviesPage.razor
@@ -1,28 +1,27 @@
-﻿@page "/top_rated"
-
-@using BlazorMovie.Services
+﻿@using BlazorMovie.Services
 @using BlazorMovie.Models
 @using BlazorMovie.Models.Interfaces
 
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
-@inject IMovieService<Result> TopRatedService
+@inject IMovieService<PopularMovie> PopularMovieService
 
-<MovieListComponent TMovie="Result" movies="@movies" Title="Top Rated Movies" OnPageChange="GetPage" />
+<MovieListComponent TMovie="PopularMovie" movies="@movies" Title="Playing Now" OnPageChanged="GetPage" />
 
 @code {
-    private PageResponse<Result>? movies;
+    private PageResponse<PopularMovie>? movies;
+    
 
     [Parameter]
-    public string? Title { get; set; } = "Top Rated Movies";
+    public string? Title { get; set; } = "Popular Movies";
+
 
     [SupplyParameterFromQuery]
     public int Page { get; set; } = 1;
 
     protected override async Task OnParametersSetAsync()
-    {
-  
-        movies = await TopRatedService.GetMoviesAsync(Page);
+    {  
+        movies = await PopularMovieService.GetMoviesAsync(Page);
     }
 
 
