--- a/BlazorMovie/Components/UIComponents/MovieListComponent.razor
+++ b/BlazorMovie/Components/UIComponents/MovieListComponent.razor
@@ -52,8 +52,8 @@
 
 
 @code {
-    
-    public PageResponse<TMovie>? movies;
+    [Parameter]
+    public PageResponse<TMovie>? movies { get; set; }
 
 
     [Parameter]
