--- a/BlazorMovie/Components/Pages/Movie.razor
+++ b/BlazorMovie/Components/Pages/Movie.razor
@@ -1,88 +1,88 @@
 ﻿@page "/movie/{id:int}"
 @using BlazorMovie.Services
+@using BlazorMovie.Components.UIComponents
 @inject TMDBClient TMDB
 
 @*movie details*@
 @if (movieDetails is null)
 {
     //build out placeholder code
-    <p><em>Loading . . .</em></p>
+    <p><em>Loading Movie Details. . .</em></p>
 }
 else
 {
-    <PageTitle>@movieDetails.Title</PageTitle>
-    <!--Page Banner-->
-    <div class="hero-bg" style="@($"--bg-img:url(https://image.tmdb.org/t/p/original/{movieDetails.BackdropPath})")">
-        <div class="hero-container-xxl d-flex flex-column flex-md-row">
-            <!--title content goes here-->
-            <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
-                <div class="mt-3 text-center text-md-end pe-3">
-                    <h1 class="text-light">@movieDetails.Title?.ToUpper()</h1>
-                    <h2 class="text-light">@movieDetails.Tagline</h2>
-                    @if (DateTime.TryParse(movieDetails.ReleaseDate, out DateTime releaseDate))
-                    {
-                        <span class="badge me-2 releaseDate">@releaseDate.ToString("MMM dd, yyyy")</span>
-                    }
-                    @{
-                        var runtime = $"{movieDetails.Runtime / 60}h {movieDetails.Runtime % 60}m";
-                        var rating = (movieDetails.VoteAverage * 10).ToString("F1");
-                    }
-                    <span class="badge me-2 runtime">@runtime</span>
-                    <span class="badge me-2 rating">@rating%<i class="bi bi-stars"></i></span>
-                    <div class="movie-links">
-                        <div class="d-flex justify-content-center justify-content-md-end p-3">
-                            @if (!string.IsNullOrEmpty(movieDetails.Homepage))
-                            {
-                                <div class="text-center px-2">
-                                    <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">Website</a>
-                                </div>
-                            }
-                            @if (!string.IsNullOrEmpty(movieDetails.ImdbId))
-                            {
-                                <div class="text-center px-2">
-                                    <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">IMDB</a>
-                                </div>
-                            }
-                        </div>
-
+   <PageTitle>@movieDetails?.Title</PageTitle>
+<!--Page Banner-->
+<div class="hero-bg" style="@($"--bg-img:url(https://image.tmdb.org/t/p/original/{movieDetails?.BackdropPath})")">
+    <div class="hero-container-xxl d-flex flex-column flex-md-row">
+        <!--title content goes here-->
+        <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
+            <div class="mt-3 text-center text-md-end pe-3">
+                <h1 class="text-light">@movieDetails?.Title?.ToUpper()</h1>
+                <h2 class="text-light">@movieDetails?.Tagline</h2>
+                @if (DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate))
+                {
+                    <span class="badge me-2 releaseDate">@releaseDate.ToString("MMM dd, yyyy")</span>
+                }
+                @{
+                    var runtime = $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m";
+                    var rating = (movieDetails.VoteAverage * 10).ToString("F1");
+                }
+                <span class="badge me-2 runtime">@runtime</span>
+                <span class="badge me-2 rating">@rating%<i class="bi bi-stars"></i></span>
+                <div class="movie-links">
+                    <div class="d-flex justify-content-center justify-content-md-end p-3">
+                        @if (!string.IsNullOrEmpty(movieDetails.Homepage))
+                        {
+                            <div class="text-center px-2">
+                                <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">Website</a>
+                            </div>
+                        }
+                        @if (!string.IsNullOrEmpty(movieDetails.ImdbId))
+                        {
+                            <div class="text-center px-2">
+                                <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">IMDB</a>
+                            </div>
+                        }
                     </div>
 
                 </div>
-            </div>
-            <!--poster goes here-->
-            <div class="order-last order-md-first d-flex justify-content-center">
-                <div class="poster-container">
-                    @if (string.IsNullOrEmpty(movieDetails.PosterPath))
-                    {
-                        <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
-                    }
-                    else
-                    {
-                        <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
-                    }
 
-                </div>
+            </div>
+        </div>
+        <!--poster goes here-->
+        <div class="order-last order-md-first d-flex justify-content-center">
+            <div class="poster-container">
+                @if (string.IsNullOrEmpty(movieDetails.PosterPath))
+                {
+                    <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
+                }
+                else
+                {
+                    <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
+                }
+
             </div>
         </div>
     </div>
-    <div class="container-xxl">
-        <div class="overview d-flex flex-column">
-            <p>@movieDetails.Overview</p>
-            @if (movieDetails.SpokenLanguages.Any())
-            {
-                <div>
-                    <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
-                </div>
-            }
-        <div>
+</div>
+<div class="container-xxl">
+    <div class="overview d-flex flex-column">
+        <p>@movieDetails.Overview</p>
+        @if (movieDetails.SpokenLanguages.Any())
+        {
+            <div>
+                <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
+            </div>
+        }
 
-        </div>
-           
-        </div>
+
     </div>
-        
+</div>
 
+    
 }
+
 
 
 @code {
