--- a/BlazorMovie/Components/UIComponents/SearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponent.razor
@@ -1,5 +1,5 @@
 ﻿@using BlazorMovie.Models
-
+@inject NavigationManager NavManager
 <div class="container mt-3">
     <div class="row">
         <div class="col-6">
@@ -42,5 +42,9 @@
     {
         // Implement search logic based on selectedCategory and searchTerm
         Console.WriteLine($"Searching {selectedCategory} for '{searchTerm}'");
+    }
+    private void OnMovieSelected(MovieDetails movieDetails)
+    {
+    //     NavigationManager.NavigateTo($"/movie/{movieDetails.Id}");
     }
 }
