--- a/BlazorMovie/Components/Layout/TopNavMenu.razor
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor
@@ -25,9 +25,24 @@
 
             </ul>
         </div>
+       
+        <SearchComponent  OnMultipleResultsFound="ShowSearchResultsModal"/>
+        
+        <SearchResultsComponent @ref="searchResultsModal" SearchResults="@searchResults"/>
     </div>
 </nav>
 
 @code {
+    private IEnumerable<MovieDetails>? searchResults;
+    private SearchResultsComponent? searchResultsModal;
 
+    private void ShowSearchResultsModal(IEnumerable<SearchModel> results)
+    {
+        searchResults = results
+             .Select(sm => sm.MovieDetails)
+             .Where(md => md != null) // Exclude null MovieDetails
+             .Cast<MovieDetails>(); // Cast to non-nullable MovieDetails
+
+        searchResultsModal?.ShowModal();
+    }
 }
