--- a/BlazorMovie/Components/Pages/Movie.razor
+++ b/BlazorMovie/Components/Pages/Movie.razor
@@ -25,20 +25,20 @@ else
                     <span class="badge me-2 releaseDate">@releaseDate.ToString("MMM dd, yyyy")</span>
                 }
                 @{
-                    var runtime = $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m";
-                    var rating = (movieDetails.VoteAverage * 10).ToString("F1");
+                    var runtime = movieDetails !=null ? $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m" : "Runtime Not Available";
+                    var rating = movieDetails !=null ? (movieDetails.VoteAverage * 10).ToString("F1"): "Rating Not Available";
                 }
                 <span class="badge me-2 runtime">@runtime</span>
                 <span class="badge me-2 rating">@rating%<i class="bi bi-stars"></i></span>
                 <div class="movie-links">
                     <div class="d-flex justify-content-center justify-content-md-end p-3">
-                        @if (!string.IsNullOrEmpty(movieDetails.Homepage))
+                        @if (!string.IsNullOrEmpty(movieDetails?.Homepage))
                         {
                             <div class="text-center px-2">
                                 <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">Website</a>
                             </div>
                         }
-                        @if (!string.IsNullOrEmpty(movieDetails.ImdbId))
+                        @if (!string.IsNullOrEmpty(movieDetails?.ImdbId))
                         {
                             <div class="text-center px-2">
                                 <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">IMDB</a>
@@ -53,7 +53,7 @@ else
         <!--poster goes here-->
         <div class="order-last order-md-first d-flex justify-content-center">
             <div class="poster-container">
-                @if (string.IsNullOrEmpty(movieDetails.PosterPath))
+                @if (string.IsNullOrEmpty(movieDetails?.PosterPath))
                 {
                     <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
                 }
@@ -68,14 +68,19 @@ else
 </div>
 <div class="container-xxl">
     <div class="overview d-flex flex-column">
-        <p>@movieDetails.Overview</p>
+        <p>@movieDetails?.Overview</p>
         @if (movieDetails.SpokenLanguages.Any())
         {
             <div>
                 <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
             </div>
         }
-
+        else
+        {
+            <div>
+                <strong> Languages:</strong> Not Available
+            </div>
+        }
 
     </div>
 </div>
