--- a/BlazorMovie/Components/Layout/TopNavMenu.razor
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor
@@ -24,7 +24,7 @@
                 </li>
 
             </ul>
-        <SearchComponent  OnMultipleResultsFound="ShowSearchResultsModal"/>
+        <SearchComponent />
         
         <SearchResultsComponent @ref="searchResultsModal" SearchResults="@searchResults"/>
         </div>
