--- a/BlazorMovie/Components/Layout/TopNavMenu.razor.css
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor.css
@@ -1,10 +1,9 @@
 ﻿.navStyle {
-    background-color: var(--sjw-golden-color);
-    color: antiquewhite;
+    background-color: var( --sjw-golden-color);
+    color: white;
     font-family: var(--sjw-title-font);
     font-size: 1.2rem;
     padding: 0.5rem;
-    
 }
 
 .navbar-nav {
