--- a/BlazorMovie/Components/Layout/TopNavMenu.razor
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor
@@ -7,20 +7,28 @@
         <div class="collapse navbar-collapse" id="navbarBM">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Popular Movies</NavLink>
+                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                     <i class="bi bi-home"></i>
+                        <span>Popular Movies</span>
+                    </NavLink>
                 </li> 
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/now_playing">Now Playing</NavLink>
+                    <NavLink class="nav-link" href="/now_playing">
                     <i class="bi bi-film"></i>
+                        <span>Now Playing</span>
+                    </NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/top_rated">Top Rated</NavLink>
+                    <NavLink class="nav-link" href="/top_rated">
                     <i class="bi bi-ticket-perforated"></i>
+                    <span>Top Rated</span>
+                    </NavLink>
                 </li>
                  <li class="nav-item">
-                    <NavLink class="nav-link" href="/upcoming">Coming Soon</NavLink>
+                    <NavLink class="nav-link" href="/upcoming">
                     <i class="bi bi-projector"></i>
+                    <span>Coming Soon</span>
+                    </NavLink>
                 </li>
 
             </ul>
